terraform/k3s/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-tls-ingress
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: minitwit-api.danielgron.dk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minitwit-api
                port:
                  number: 80
  tls:
    - secretName: minitwit-api-tls
      hosts:
        - minitwit-api.danielgron.dk
